--- a/style.css
+++ b/style.css
@@ -4,3 +4,32 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+
+.container {
+    width: 100%;
+    min-height: 100vh;
+    background-color: aqua;
+    background-image: linear-gradient(12deg, #11dab8 0%, #06105a 100%);
+    padding: 10px;
+}
+
+.todo-app {
+    width: 30%;
+    min-width: 540px;
+    background: #fff;
+    margin: 100px auto 20px;
+    padding: 40px 30px 70px;
+    border-radius: 10px;
+}
+
+.todo-app h2 {
+    color: #192055;
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.todo-app h2 img {
+    width: 30px;
+    margin-left: 10px;
+}
