--- a/style.css
+++ b/style.css
@@ -118,3 +118,51 @@ ul li span {
 ul li span:hover {
     background: #edeef0;
 }
+
+
+/* adding responsiveness */
+
+@media (max-width: 600px) {
+
+    .todo-app {
+        width: 90%;
+        min-width: unset;
+        padding: 20px;
+        margin: 60px auto;
+    }
+
+    .row {
+        flex-direction: column;
+        align-items: stretch;
+        gap: 10px;
+        padding: 10px;
+    }
+
+    input {
+        width: 100%;
+    }
+
+    button {
+        width: 100%;
+        padding: 0.8rem;
+    }
+
+    ul li {
+        font-size: 16px;
+        padding-left: 45px;
+    }
+
+    ul li::before {
+        height: 24px;
+        width: 24px;
+        top: 10px;
+        left: 10px;
+    }
+
+    ul li span {
+        width: 35px;
+        height: 35px;
+        font-size: 20px;
+        line-height: 35px;   
+    }
+}
